--- a/index.html
+++ b/index.html
@@ -4,14 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WeatherMan ☀️</title>
+    <style>
+        body {
+            background-color: rgba(255, 186, 145, 0.5);
+            font-family: sans-serif;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        label {
+            margin-bottom: 10px; /* Add some bottom margin for visual spacing */
+        }
+        input[type="text"] {
+            width: 100%;
+            max-width: 400px;
+            padding: 10px;
+            font-size: 1.2rem;
+            border: none;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+            margin-bottom: 10px; /* Add some bottom margin for visual spacing */
+        }
+        button[type="submit"] {
+            padding: 10px 20px;
+            font-size: 1.2rem;
+            border: none;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+            background-color: #fff;
+            color: #333;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
+    <h3 align="center">WeatherMan 1.0v</h3>
     <form action="/" method="post">
-        <label for="cityInput">City Name: </label>
+        <label for="cityInput"><b>Enter your City Name</b></label>
         <input type="text" id="cityInput" name="cityName" placeholder="Enter city name">
         <button type="submit">Get it</button>
     </form>
-   
 </body>
 </html>
